--- a/curr_ShoppingApp/shoppingstyles.css
+++ b/curr_ShoppingApp/shoppingstyles.css
@@ -12,6 +12,8 @@
     background-color: #ded;
 }
 
-.strike {
+.checked {
+    background: rgb(95, 93, 93);
+    color:#fff;
     text-decoration: line-through;
 }
