--- a/static/css/shoppingstyles.css
+++ b/static/css/shoppingstyles.css
@@ -12,8 +12,7 @@
     background-color: #ded;
 }
 
-.checked {
-    background: rgb(95, 93, 93);
-    color:#fff;
+.purchased {
     text-decoration: line-through;
+    background-color: grey;
 }
